# thai-job-nlp-ner

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  app_demo.py  docker-compose.yml  model_card.md  model_card_phayathaibert.md  pyproject.toml
configs/: config.yaml  config_phayathaibert.yaml
data/raw/: synthetic.jsonl  synthetic_0.json  synthetic_template.json
docs/: AGENT_CONTEXT.md
docs/ELI5/: multi_model_synthetic_data.md  training_memory.md  training_report_glossary.md
docs/prompt_lib/: INCREMENTAL_DATA_PROMPT.md  INCREMENTAL_DATA_PROMPT_v2.md  PROMPT_DATA_EXPORT.md  RESEARCH_PROMPT_GENERAL_APPLE_SILICON.md  SYNTHETIC_DATA_PROMPT.md  thai_nlp_landscape_research_brief.md
docs/research/: Apple Silicon ML Training State.md  RESEARCH_PROMPT_M5_AND_ALIGNMENT.md  Thai NLP on Apple Silicon M5.md  WangchanBERTa Model Research Overview.md
docs/study_guide/: 01_nlp_and_ner_foundations.md  02_ml_data_engineering.md  03_training_hardware_and_deployment.md
notebooks/: 01_data_inspection.ipynb  02_error_analysis.ipynb
scripts/: build_hf_dataset.py  compare_models.py  generate_synthetic_ner.py  test_api.py  upload_to_hub.py  validate_synthetic.py
src/alignment/: fuzzy_matcher.py  iob2_formatter.py  token_mapper.py
src/data/: load_dataset.py  synthetic_augment.py
src/evaluation/: per_entity_report.py
src/inference/: app.py  pipeline.py
src/training/: metrics.py  train_ner.py
