[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thai-job-nlp-ner"
version = "0.1.0"
description = "Efficient Thai Named Entity Recognition (NER) for informal job posts using fine-tuned WangchanBERTa"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "evaluate>=0.4.0",
    "seqeval>=1.2.2",
    "torch>=2.2.0",
    "pythainlp>=5.0.0",
    "rapidfuzz>=3.6.0",
    "sentencepiece>=0.2.0",
    "openai>=1.12.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.0.0",
    "wandb>=0.16.0",
    "gradio>=4.0.0",
    "matplotlib>=3.8.0",
]

[tool.setuptools.packages.find]
include = ["src*"]
